<resources>
    <string name="app_name">FCMB test</string>
    <string name="txt_search_names">Search Names</string>
    <string name="txt_no_results_found">No results found</string>
    <string name="title_names">List of Names</string>
    <string name="hint_search">Search Name</string>
    <string name="label_all_names">ALL NAMES</string>
    <string name="label_no_results">No results found</string>
    <string name="label_no_results_sub">Try a different name</string>
    <string name="cd_search_field">Search names</string>
    <string name="cd_names_list">List of names</string>
    <string name="cd_empty_state">No results found for your search</string>
</resources>